// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CanonicalAds Ads Snapshots should correctly render a Canonical mpu ad with dotcom-bootstrap script 1`] = `
.emotion-0 {
  background-color: #E6E8EA;
  display: none;
  visibility: hidden;
  padding: 0;
}

@media (min-width: 18.75rem) {
  .emotion-0 {
    min-height: 5.1875rem;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    -webkit-justify-content: center;
    justify-content: center;
    visibility: visible;
  }
}

@media (min-width: 19.75rem) {
  .emotion-0 {
    padding: 1rem 0 0.5rem 0;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    min-height: 17.6875rem;
  }
}

<div>
  <section
    aria-hidden="true"
    aria-label="Advertisement 2"
    class="emotion-0"
    data-e2e="advertisement"
    role="region"
  >
    <div
      class="dotcom-ad"
      id="dotcom-mpu"
    />
  </section>
</div>
`;

exports[`CanonicalAds Ads Snapshots should correctly render an Canonical leaderboard ad with dotcom-bootstrap script 1`] = `
.emotion-0 {
  background-color: #E6E8EA;
  display: none;
  visibility: hidden;
}

@media (min-width: 20rem) {
  .emotion-0 {
    min-height: 5.1875rem;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    -webkit-justify-content: center;
    justify-content: center;
    visibility: visible;
  }
}

@media (min-width: 21rem) {
  .emotion-0 {
    padding: 1rem 0;
  }
}

@media (min-width: 25rem) {
  .emotion-0 {
    min-height: 5.8125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    min-height: 7.6875rem;
    padding: 2rem 0;
  }
}

@media (min-width: 58.75rem) {
  .emotion-0 {
    min-height: 18.6875rem;
    padding: 1.5rem 0;
  }
}

<div>
  <section
    aria-hidden="true"
    aria-label="Advertisement"
    class="emotion-0"
    data-e2e="advertisement"
    role="region"
  >
    <div
      class="dotcom-ad"
      id="dotcom-leaderboard"
    />
  </section>
</div>
`;
